service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ariscorp-website-service
spec:
  selector:
    app: ariscorp-website
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
